Fix datepicker overflow in small screens

--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -199,4 +199,12 @@
       display: none;
     }
   }
+
+  @media (max-width: $xs) {
+    &_datepicker {
+      #{$class}__content {
+        left: -1.75rem;
+      }
+    }
+  }
 }
